--- a/src/styles/utilities/_colors.scss
+++ b/src/styles/utilities/_colors.scss
@@ -10,30 +10,30 @@
 
 // bg--[palette]-[color]--grad-[iteration]
 
-.bg--secondary-dark-1--grad-1 {
-    background-image: linear-gradient(-84deg, var(--secondary-dark-1), var(--secondary-base));
-}
-
-.bg--secondary-dark-2--grad-1 {
-    background-image: linear-gradient(135deg, var(--secondary-dark-2), var(--secondary-dark-1), var(--secondary-base));
-}
-
-.bg--secondary-dark-2--grad-2 {
-    background-image: linear-gradient(-82deg, var(--secondary-dark-2), var(--secondary-dark-1), var(--secondary-base));
-}
-
-.bg--primary-base--grad-1 {
-    background-image: linear-gradient(0deg, var(--primary-base), var(--primary-dark-2));
+.bg--primary-dark-1--grad-1 {
+    background-image: linear-gradient(-84deg, var(--primary-dark-1), var(--primary-base));
 }
 
 .bg--primary-dark-2--grad-1 {
-    background-image: linear-gradient(132deg, var(--primary-dark-2), var(--primary-light-1));
+    background-image: linear-gradient(135deg, var(--primary-dark-2), var(--primary-dark-1), var(--primary-base));
 }
 
-.bg--primary-light-4--grad-1 {
-    background-image: linear-gradient(180deg, var(--primary-light-4), var(--white-base));
+.bg--primary-dark-2--grad-2 {
+    background-image: linear-gradient(-82deg, var(--primary-dark-2), var(--primary-dark-1), var(--primary-base));
 }
 
-.bg--primary-light-4--grad-2 {
-    background-image: linear-gradient(180deg, var(--primary-light-4), var(--white-base) 68%);
+.bg--tertiary-base--grad-1 {
+    background-image: linear-gradient(0deg, var(--tertiary-base), var(--tertiary-dark-2));
+}
+
+.bg--tertiary-dark-2--grad-1 {
+    background-image: linear-gradient(132deg, var(--tertiary-dark-2), var(--tertiary-light-1));
+}
+
+.bg--tertiary-light-4--grad-1 {
+    background-image: linear-gradient(180deg, var(--tertiary-dark-2), var(--white-base));
+}
+
+.bg--tertiary-light-4--grad-2 {
+    background-image: linear-gradient(180deg, var(--tertiary-dark-2), var(--white-base) 68%);
 }
